--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+    --c-darkblue: rgb(42, 54, 71);
+    --c-lightblue: rgb(41, 171, 226);
+    --bg-body: #f5f5f5;
+    --dimmed: #d1d1d1;
+}
