--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,31 +6,33 @@
         <button (click)="renderSignUp()">Sign up</button>
     </div>
 </header>
-<form class='form-card' id="login-form">
+<form [formGroup]="form" class='form-card'>
     <h1>Log in</h1>
     <img src="./assets/img/icon_line.png" class="line">
     <div class='user-input'>
-        <input id='login-mail' type='email' placeholder='Email' required
-            oninvalid="event.preventDefault(); generateTooltip(event)" />
+        <input [(ngModel)]="user.email" placeholder="Your Email" formControlName="email"/>
+        <div *ngIf="form.controls['email'].invalid && form.controls['email'].touched">
+            <div class="error-massage" *ngIf="form.controls['email'].errors?.['required']">Email is required.</div>
+        </div>
         <img src='./assets/img/icon_mail.png' />
     </div>
     <div class='user-input'>
-        <p id="invalid"></p>
-        <p id="success"></p>
-        <input id='login-password' type='password' placeholder='Password' required
-            oninvalid="event.preventDefault(); generateTooltip(event)" />
+        <input [(ngModel)]="user.password" placeholder="Your Password" formControlName="password"/>
+        <div *ngIf="form.controls['password'].invalid && form.controls['password'].touched">
+            <div class="error-massage" *ngIf="form.controls['password'].errors?.['required']">Password is required.</div>
+        </div>
         <img src='assets/img/icon_lock.png' />
     </div>
     <div class='login-options-container'>
         <div class='column1'>
             <div>
-                <input type='checkbox' id="checkbox" />
+                <input type='checkbox' id="checkbox"/>
                 <p>Remember me</p>
             </div>
-            <button>Log in</button>
+            <button (click)="logIn()">Log in</button>
         </div>
         <div class='column2'>
-            <p onclick="renderForgotPassword()">Forgot my password</p>
+            <p (click)="renderForgotPassword()">Forgot my password</p>
             <button id="guestLogin">Guest Log in</button>
         </div>
     </div>
