--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,1 +1,100 @@
-<p>board works!</p>
+<div class="grid-view-component">
+    <div class="sidebar"><app-sidebar></app-sidebar></div>
+    <div class="header"><app-header-template></app-header-template></div>
+    <div class="board-container">
+        <div class="headline">
+            <div class="title-of-board">Board</div>
+            <div class="headline-right-side">
+                <div id="searchMenu" class="search-menu">
+                    <input placeholder="Find task" required id="searchTask" oninput="searchTask()" class="search-task"
+                        type="text">
+                    <div class="search-icon-container">
+                        <button disabled class="search-button"><img class="search-icon"
+                                src="assets/img/search.png"></button>
+                    </div>
+                </div>
+                <div onclick="addTask('toDo')" class="add-task-btn-board">Add task <img
+                        src="assets/img/plus-icon-white.svg">
+                </div>
+            </div>
+        </div>
+
+        <div class="tasks-board">
+            <div id="dropArea-1" class="drag-drop-area-1 drag-drop-containers">
+                <div class="title-1 title">
+                    <div>To do</div>
+                    <div onclick="addTask('toDo')">
+                        <svg class="plusButton" width="30" height="30" viewBox="0 0 30 30" fill="none
+                        " xmlns="http://www.w3.org/2000/svg">
+                            <path d="M15 7.5V22.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round" />
+                            <path d="M22.5 15.1416L7.5 15.1416" stroke="#2A3647" stroke-width="2"
+                                stroke-linecap="round" />
+                            <rect x="1" y="1" width="28" height="28" rx="9" stroke="#2A3647" stroke-width="2" />
+                        </svg>
+                    </div>
+                </div>
+                <div id="taskArea-1" class="tasks-area-1 task-area" ondragleave="ondragLeave('taskArea-1')"
+                    ondragenter="ondragEnter('taskArea-1')" ondragend="finishedDragging()"
+                    ondrop="moveTo('toDo',event,'taskArea-1')" ondragover="allowDrop(event)">
+                </div>
+            </div>
+            <div id="dropArea-2" class="drag-drop-area-2 drag-drop-containers">
+                <div class="title-2 title">
+                    <div class="title-task-area">In progress</div>
+                    <div onclick="addTask('inProgress')">
+                        <svg class="plusButton" width="30" height="30" viewBox="0 0 30 30" fill="none
+                        " xmlns="http://www.w3.org/2000/svg">
+                            <path d="M15 7.5V22.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round" />
+                            <path d="M22.5 15.1416L7.5 15.1416" stroke="#2A3647" stroke-width="2"
+                                stroke-linecap="round" />
+                            <rect x="1" y="1" width="28" height="28" rx="9" stroke="#2A3647" stroke-width="2" />
+                        </svg>
+                    </div>
+                </div>
+                <div id="taskArea-2" class="tasks-area-2 task-area" ondragleave="ondragLeave('taskArea-2')"
+                    ondragenter="ondragEnter('taskArea-2')" ondragend="finishedDragging()"
+                    ondrop="moveTo('inProgress',event,'taskArea-2')" ondragover="allowDrop(event)">
+                </div>
+            </div>
+
+
+            <div id="dropArea-3" class="drag-drop-area-3 drag-drop-containers">
+                <div class="title-3 title">
+                    <div>Await Feedback</div>
+                    <div onclick="addTask('awaitingFeedback')">
+                        <svg class="plusButton" width="30" height="30" viewBox="0 0 30 30" fill="none
+                        " xmlns="http://www.w3.org/2000/svg">
+                            <path d="M15 7.5V22.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round" />
+                            <path d="M22.5 15.1416L7.5 15.1416" stroke="#2A3647" stroke-width="2"
+                                stroke-linecap="round" />
+                            <rect x="1" y="1" width="28" height="28" rx="9" stroke="#2A3647" stroke-width="2" />
+                        </svg>
+                    </div>
+                </div>
+                <div id="taskArea-3" class="tasks-area-3 task-area" ondragleave="ondragLeave('taskArea-3')"
+                    ondragenter="ondragEnter('taskArea-3')" ondragend="finishedDragging()"
+                    ondrop="moveTo('awaitingFeedback',event,'taskArea-3')" ondragover="allowDrop(event)">
+                </div>
+            </div>
+
+            <div id="dropArea-4" class="drag-drop-area-4 drag-drop-containers">
+                <div class="title-4 title">
+                    <div>Done</div>
+                    <div onclick="addTask('done')">
+                        <svg class="plusButton" width="30" height="30" viewBox="0 0 30 30" fill="none
+                        " xmlns="http://www.w3.org/2000/svg">
+                            <path d="M15 7.5V22.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round" />
+                            <path d="M22.5 15.1416L7.5 15.1416" stroke="#2A3647" stroke-width="2"
+                                stroke-linecap="round" />
+                            <rect x="1" y="1" width="28" height="28" rx="9" stroke="#2A3647" stroke-width="2" />
+                        </svg>
+                    </div>
+                </div>
+                <div id="taskArea-4" class="tasks-area-4 task-area" ondragleave="ondragLeave('taskArea-4')"
+                    ondragenter="ondragEnter('taskArea-4')" ondragend="finishedDragging()"
+                    ondrop="moveTo('done',event,'taskArea-4')" ondragover="allowDrop(event)">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
