--- a/src/app/header-template/header-template.component.html
+++ b/src/app/header-template/header-template.component.html
@@ -1,9 +1,9 @@
-<header>
-    <div class="header-logo-container"><img class="header-logo" src="assets/img/join_logo_dark.png" alt=""></div>
-    <div class="header-headline-container">Kanban Project Management tool</div>
-    <div class="header-image-container">
-      <img src="assets/img/icon_help.png" alt="icon_help" class="icon-help" onclick="window.location.href= 'help.html'" />
-      <img (click)="openCloseLogout()" src="assets/img/icon_person.png" alt="icon_person" class="icon-user" />
-      <div id="tooltip" class="logout-tooltip" (click)="logout()">Logout</div>
-    </div>
-</header>
+<div class="header-logo-container">
+  <h1>Kanban Project Management tool</h1>
+  <div class="header-image-container">
+    <img class="info" src="assets/img/icon_help.png" alt="#"/>
+    <img class="user" (click)="openCloseLogout()" src="assets/img/icon_person.png" alt="#"/>
+  </div>
+</div>
+
+
