--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <div>
         <p>Not a join user?</p>
     </div>
-    <div class='column3'>
+    <div class="column3">
         <button (click)="renderSignUp()">Sign up</button>
     </div>
 </header>
@@ -10,28 +10,29 @@
     <h1>Log in</h1>
     <img src="./assets/img/icon_line.png" class="line">
     <div class='user-input'>
-        <input [(ngModel)]="user.email" placeholder="Your Email" formControlName="email"/>
+        <input [(ngModel)]="user.email" placeholder="Your Email" formControlName="email" />
         <div *ngIf="form.controls['email'].invalid && form.controls['email'].touched">
             <div class="error-massage" *ngIf="form.controls['email'].errors?.['required']">Email is required.</div>
         </div>
         <img src='./assets/img/icon_mail.png' />
     </div>
-    <div class='user-input'>
-        <input [(ngModel)]="user.password" placeholder="Your Password" formControlName="password"/>
+    <div class="user-input">
+        <input [(ngModel)]="user.password" placeholder="Your Password" formControlName="password" />
         <div *ngIf="form.controls['password'].invalid && form.controls['password'].touched">
-            <div class="error-massage" *ngIf="form.controls['password'].errors?.['required']">Password is required.</div>
+            <div class="error-massage" *ngIf="form.controls['password'].errors?.['required']">Password is required.
+            </div>
         </div>
         <img src='assets/img/icon_lock.png' />
     </div>
     <div class='login-options-container'>
-        <div class='column1'>
+        <div class="column1">
             <div>
-                <input type='checkbox' id="checkbox"/>
+                <input type='checkbox' id="checkbox" />
                 <p>Remember me</p>
             </div>
             <button (click)="logIn()">Log in</button>
         </div>
-        <div class='column2'>
+        <div class="column2">
             <p (click)="renderForgotPassword()">Forgot my password</p>
             <button id="guestLogin">Guest Log in</button>
         </div>
