--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,238 @@
+/* inter-100 - latin */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 100;
+  src: url('./assets/fonts/inter-v12-latin-100.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('./assets/fonts/inter-v12-latin-100.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./assets/fonts/inter-v12-latin-100.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./assets/fonts/inter-v12-latin-100.woff') format('woff'),
+    /* Modern Browsers */
+    url('./assets/fonts/inter-v12-latin-100.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./assets/fonts/inter-v12-latin-100.svg#Inter') format('svg');
+  /* Legacy iOS */
+}
+
+/* inter-300 - latin */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 300;
+  src: url('./assets/fonts/inter-v12-latin-300.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('./assets/fonts/inter-v12-latin-300.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./assets/fonts/inter-v12-latin-300.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./assets/fonts/inter-v12-latin-300.woff') format('woff'),
+    /* Modern Browsers */
+    url('./assets/fonts/inter-v12-latin-300.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./assets/fonts/inter-v12-latin-300.svg#Inter') format('svg');
+  /* Legacy iOS */
+}
+
+/* inter-regular - latin */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./assets/fonts/inter-v12-latin-regular.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('./assets/fonts/inter-v12-latin-regular.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./assets/fonts/inter-v12-latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./assets/fonts/inter-v12-latin-regular.woff') format('woff'),
+    /* Modern Browsers */
+    url('./assets/fonts/inter-v12-latin-regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./assets/fonts/inter-v12-latin-regular.svg#Inter') format('svg');
+  /* Legacy iOS */
+}
+
+/* inter-500 - latin */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  src: url('./assets/fonts/inter-v12-latin-500.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('./assets/fonts/inter-v12-latin-500.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./assets/fonts/inter-v12-latin-500.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./assets/fonts/inter-v12-latin-500.woff') format('woff'),
+    /* Modern Browsers */
+    url('./assets/fonts/inter-v12-latin-500.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./assets/fonts/inter-v12-latin-500.svg#Inter') format('svg');
+  /* Legacy iOS */
+}
+
+/* inter-600 - latin */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  src: url('./assets/fonts/inter-v12-latin-600.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('./assets/fonts/inter-v12-latin-600.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./assets/fonts/inter-v12-latin-600.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./assets/fonts/inter-v12-latin-600.woff') format('woff'),
+    /* Modern Browsers */
+    url('./assets/fonts/inter-v12-latin-600.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./assets/fonts/inter-v12-latin-600.svg#Inter') format('svg');
+  /* Legacy iOS */
+}
+
+/* inter-200 - latin */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 200;
+  src: url('./assets/fonts/inter-v12-latin-200.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('./assets/fonts/inter-v12-latin-200.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./assets/fonts/inter-v12-latin-200.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./assets/fonts/inter-v12-latin-200.woff') format('woff'),
+    /* Modern Browsers */
+    url('./assets/fonts/inter-v12-latin-200.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./assets/fonts/inter-v12-latin-200.svg#Inter') format('svg');
+  /* Legacy iOS */
+}
+
+/* inter-700 - latin */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  src: url('./assets/fonts/inter-v12-latin-700.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('./assets/fonts/inter-v12-latin-700.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./assets/fonts/inter-v12-latin-700.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./assets/fonts/inter-v12-latin-700.woff') format('woff'),
+    /* Modern Browsers */
+    url('./assets/fonts/inter-v12-latin-700.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./assets/fonts/inter-v12-latin-700.svg#Inter') format('svg');
+  /* Legacy iOS */
+}
+
+/* inter-800 - latin */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 800;
+  src: url('./assets/fonts/inter-v12-latin-800.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('./assets/fonts/inter-v12-latin-800.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./assets/fonts/inter-v12-latin-800.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./assets/fonts/inter-v12-latin-800.woff') format('woff'),
+    /* Modern Browsers */
+    url('./assets/fonts/inter-v12-latin-800.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./assets/fonts/inter-v12-latin-800.svg#Inter') format('svg');
+  /* Legacy iOS */
+}
+
+/* inter-900 - latin */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 900;
+  src: url('./assets/fonts/inter-v12-latin-900.eot');
+  /* IE9 Compat Modes */
+  src: local(''),
+    url('./assets/fonts/inter-v12-latin-900.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */
+    url('./assets/fonts/inter-v12-latin-900.woff2') format('woff2'),
+    /* Super Modern Browsers */
+    url('./assets/fonts/inter-v12-latin-900.woff') format('woff'),
+    /* Modern Browsers */
+    url('./assets/fonts/inter-v12-latin-900.ttf') format('truetype'),
+    /* Safari, Android, iOS */
+    url('./assets/fonts/inter-v12-latin-900.svg#Inter') format('svg');
+  /* Legacy iOS */
+}
+
+body {
+  box-sizing: border-box;
+  margin: 0;
+}
+
 :root {
-    --c-darkblue: rgb(42, 54, 71);
-    --c-lightblue: rgb(41, 171, 226);
-    --bg-body: #f5f5f5;
-    --dimmed: #d1d1d1;
+  --c-darkblue: rgb(42, 54, 71);
+  --c-lightblue: rgb(41, 171, 226);
+  --bg-body: #f5f5f5;
+  --dimmed: #d1d1d1;
+  font-family: "Inter", sans-serif;
+}
+
+.grid-view-component {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(10, 1fr);
+  height: 100vh;
+
+  .header {
+    grid-column: 2/7;
+    grid-row: 1/1;
+
+  }
+
+  .board-container {
+    grid-column: 2/7;
+    grid-row: 2/4;
+  }
+
+  .add-task-container {
+    grid-column: 2/11;
+    grid-row: 2/11;
+    margin-top: 2rem;
+    max-width: 900px;
+    margin-left: 80px;
+    margin-right: 1rem;
+    overflow-y: auto;
+  }
+
+  .sidebar {
+    grid-row: 1/11;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: var(--c-darkblue);
+  }
+}
+
+.category {
+  cursor: pointer;
+  font-size: 1.2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 7px;
 }
