--- a/src/app/add-task/add-task.component.scss
+++ b/src/app/add-task/add-task.component.scss
@@ -117,7 +117,7 @@ textarea:focus {
     top: 20px;
 }
 
-#contactsDropdownContainer {
+.contactsDropdownContainer {
     background: white;
     border: 1px solid #ccc;
     border-radius: 0 0 7px 7px;
