--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -85,18 +85,15 @@
 
                 <label for="addSubtask" class="mt-15">Subtasks</label>
                 <div class="subtask-input-container">
-                    <input type="text" [(ngModel)]="newSubtask" placeholder="Enter a subtask" formControlName="subtask">
+                    <input type="text" [(ngModel)]="newSubtask" placeholder="Enter a subtask" formControlName="newSubtask">
                     <div class="subtask-oninput">
                         <img src="assets/img/icon_clear.png" (click)="cancelSubtask()">
                         <img src="assets/img/icon_done.png" (click)="confirmSubtask()">
                     </div>
-                    <!-- <div *ngIf="form.controls['subtask'].invalid && form.controls['subtask'].touched">
-                        <div class="error-massage" *ngIf="form.controls['subtask'].errors?.['required']">Title is
-                            required.
-                        </div>
-                    </div> -->
                 </div>
-                <div class="subtask-container" *ngIf="addSubtask"></div>
+                <div class="subtask-container" *ngFor="let subtask of subtasks">
+                    <div class="category">{{ subtask }}</div>
+                </div>
                 <div class="action-button-container">
                     <button (click)=" clearTaskForm()">Clear<img src="./assets/img/icon_close.png"></button>
                     <button (click)="createTask()">Create Task<img src="./assets/img/icon_create.png"></button>
