--- a/src/app/add-task/add-task.component.scss
+++ b/src/app/add-task/add-task.component.scss
@@ -397,6 +397,12 @@ input[type="checkbox"]:checked::before {
 }
 
 .subtask-container {
+    background: white;
+    border: 1px solid #ccc;
+    border-radius: 0 0 7px 7px;
+    border-top: none;
+    max-height: 150px;
+    overflow-y: auto;
     height: 150px;
     overflow-y: auto;
     overflow-x: hidden;
