--- a/src/app/add-task/add-task.component.scss
+++ b/src/app/add-task/add-task.component.scss
@@ -166,7 +166,8 @@ textarea:focus {
 }
 
 .category,
-.contact {
+.contact,
+.subtask {
     cursor: pointer;
     font-size: 1.2rem;
     display: flex;
@@ -297,6 +298,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     box-sizing: border-box;
 }
 
+.category-input {
+    max-width: 300px;
+}
+
 .add-subtask-icon {
     top: 50%;
     transform: translateY(-50%) scale(0.8);
@@ -374,7 +379,6 @@ input[type="checkbox"]:checked::before {
     transition: all 0.3s;
 }
 
-
 .subtask-oninput img:last-of-type,
 .category-oninput img:last-of-type {
     width: 20px;
@@ -382,6 +386,7 @@ input[type="checkbox"]:checked::before {
     border-left: 1px solid var(--dimmed);
     padding-left: 0.6rem;
 }
+
 .category-oninput {
     display: flex;
     align-items: center;
@@ -391,9 +396,8 @@ input[type="checkbox"]:checked::before {
     display: flex;
     align-items: center;
     position: absolute;
-    top: 30%;
-    right: 15px;
-    cursor: pointer;
+    top: 38%;
+    right: 20px;
 }
 
 .subtask-container {
@@ -412,17 +416,22 @@ input[type="checkbox"]:checked::before {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 7px;
-    margin-bottom: 0.8rem;
+    padding: 7px 0;
     margin-top: 0.8rem;
 }
 
-.subtask p {
-    margin: 0;
+.category img {
+    width: 50%;
+    cursor: pointer;
+    transition: all 225ms ease-in-out;
+}
+
+.category img:hover {
+    transform: scale(1.2);
 }
 
 .subtask img {
-    width: 6%;
+    width: 50%;
     cursor: pointer;
     transition: all 225ms ease-in-out;
 }
