--- a/src/app/add-task/add-task.component.scss
+++ b/src/app/add-task/add-task.component.scss
@@ -3,7 +3,7 @@
 }
 
 .red {
-    background: #fb00ff;
+    background: #ff0000;
 }
 
 .blue {
@@ -30,6 +30,11 @@
     background: #1fd7c1;
 }
 
+
+.mt-15 {
+    margin-top: 1.5rem;
+}
+
 /* add task card */
 
 .task-card h1 {
@@ -37,6 +42,7 @@
 }
 
 /* two add task columns*/
+
 .column-container {
     display: flex;
     justify-content: space-between;
@@ -148,18 +154,6 @@ textarea:focus {
     box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 20%);
 }
 
-#categoryDot {
-    width: 10px;
-    height: 10px;
-    border: 2px solid #ffffff;
-    border-radius: 50%;
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    display: none;
-}
-
 .selected {
     transform: scale(1.2);
     border: 2px solid var(--c-darkblue);
@@ -167,13 +161,18 @@ textarea:focus {
 
 .category,
 .contact,
-.subtask {
+.subtasks {
     cursor: pointer;
     font-size: 1.2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 7px;
+
+    &:hover {
+        background: lightgrey;
+        transition: all 200ms ease-in-out;
+    }
 }
 
 .contact {
@@ -196,12 +195,6 @@ textarea:focus {
 .contact input {
     margin: 0;
     cursor: pointer;
-}
-
-.category:hover,
-.contact:hover {
-    background: lightgrey;
-    transition: all 200ms ease-in-out;
 }
 
 textarea {
@@ -346,7 +339,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     }
 }
 
-
 .alert img {
     margin-left: 1rem;
 }
@@ -417,7 +409,6 @@ input[type="checkbox"]:checked::before {
     justify-content: space-between;
     align-items: center;
     padding: 7px 0;
-    margin-top: 0.8rem;
 }
 
 .category img {
@@ -493,9 +484,4 @@ input[type="checkbox"]:checked::before {
     position: absolute;
     right: 0.5rem;
     transform: scale(0.8);
-}
-
-.required:empty {
-    visibility: hidden;
-    height: 15px;
 }
